log
Tue Apr 14 10:57:02 PM UTC 2026: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:53:19: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Wincompatible-pointer-types]
   53 |     mapa->buckets = (Pair*) malloc(capacity * (sizeof(Pair)));
      |                   ^
97fbcd0
Tue Apr 14 10:57:24 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
0638d68
Tue Apr 14 10:57:48 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
3f0f401
Tue Apr 14 11:10:09 PM UTC 2026: 
 hashmap.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:70:15: error: too few arguments to function ‘hash’
   70 |     int pos = hash(key);
      |               ^~~~
hashmap.c:28:6: note: declared here
   28 | long hash( char * key, long capacity) {
      |      ^~~~
hashmap.c:78:9: error: expected expression before ‘}’ token
   78 |         }
      |         ^
hashmap.c:78:9: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
hashmap.c:68:6: note: declared here
   68 | void insertMap(HashMap * map, char * key, void * value)
      |      ^~~~~~~~~
hashmap.c:87:17: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   87 |     map->buckets->value = value;
      |                 ^~
      |     (*          )
0773742
Tue Apr 14 11:10:42 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:78:9: error: expected expression before ‘}’ token
   78 |         }
      |         ^
hashmap.c:78:9: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
hashmap.c:68:6: note: declared here
   68 | void insertMap(HashMap * map, char * key, void * value)
      |      ^~~~~~~~~
hashmap.c:87:17: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   87 |     map->buckets->value = value;
      |                 ^~
      |     (*          )
edd2aa1
Tue Apr 14 11:10:54 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:87:17: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   87 |     map->buckets->value = value;
      |                 ^~
      |     (*          )
756aff0
Tue Apr 14 11:11:15 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c54120c
Tue Apr 14 11:15:47 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
ab4db09
Tue Apr 14 11:17:05 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 20/60
d767247
Tue Apr 14 11:20:47 PM UTC 2026: 
 hashmap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 20/60
b546801
Tue Apr 14 11:21:21 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:104:13: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  104 |             if(strcmp(map->buckets[pos]->key,key) == 0)
      |             ^~
hashmap.c:106:17: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  106 |                 return map->buckets[pos];
      |                 ^~~~~~
cc1: all warnings being treated as errors
08d0b96
Tue Apr 14 11:22:51 PM UTC 2026: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 20/60
2e3c02c
Tue Apr 14 11:25:06 PM UTC 2026: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 30/60
5bed3d9
Tue Apr 14 11:31:41 PM UTC 2026: 
 hashmap.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘eraseMap’:
hashmap.c:122:21: error: passing argument 1 of ‘hash’ makes pointer from integer without a cast [-Wint-conversion]
  122 |     long pos = hash(pos,map->capacity);
      |                     ^~~
      |                     |
      |                     long int
hashmap.c:28:19: note: expected ‘char *’ but argument is of type ‘long int’
   28 | long hash( char * key, long capacity) {
      |            ~~~~~~~^~~
c5906e8
Tue Apr 14 11:32:06 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 40/60
16d9b5f
Tue Apr 14 11:37:39 PM UTC 2026: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘firstMap’:
hashmap.c:148:17: error: expected ‘,’ or ‘;’ before ‘return’
  148 |                 return par;
      |                 ^~~~~~
hashmap.c:147:23: error: unused variable ‘par’ [-Werror=unused-variable]
  147 |                 Pair* par = map->buckets[i]
      |                       ^~~
cc1: all warnings being treated as errors
7b75868
Tue Apr 14 11:37:50 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 40/60
4b062f9
Tue Apr 14 11:38:34 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
91e2b7f
Tue Apr 14 11:39:11 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 40/60
707b145
Tue Apr 14 11:40:21 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|2
total_score: 40/60
ed2d32a
Tue Apr 14 11:41:51 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 40/60
9265259
